added some comments